# uptime-social-media

./: README.md
post_generator/: pyproject.toml
post_generator/src/post_generator/: crew.py  main.py
post_generator/src/post_generator/config/: agents.yaml  tasks.yaml
post_generator/src/post_generator/knowledge/: personas.yaml
post_generator/src/post_generator/posts/: ana_clara_faria.md  andré_souza.md  beatriz_correia.md  beatriz_rocha.md  bruna_siqueira.md  bruno_carvalho.md  camila_teixeira.md  carlos_mendes.md  clara_bastos.md  daniel_moraes.md  daniela_alves.md  diogo_nogueira.md  felipe_arruda.md  fernanda_lins.md  gabriela_lima.md  helena_drummond.md  hugo_barros.md  igor_santos.md  isabela_costa.md  joana_medeiros.md  júlia_matos.md  larissa_antunes.md  laura_gomes.md  lucas_pereira.md  léo_borges.md  marcelo_guedes.md  marcos_vinícius.md  patrícia_mello.md  pedro_andrade.md  rafael_teles.md  renata_viana.md  ricardo_neves.md  rodrigo_azevedo.md  samuel_vilar.md  sofia_ribeiro.md  sérgio_duarte.md  talita_soares.md  thiago_martins.md  vanessa_dias.md  victor_paiva.md
post_generator/src/post_generator/tools/: img_search_tool.py
uptime/: GEMINI.md  README.md  firebase.json  pubspec.yaml
uptime/android/app/: build.gradle.kts  google-services.json
uptime/ios/Runner/: Info.plist
uptime/ios/Runner.xcodeproj/: project.pbxproj
uptime/lib/: firebase_options.dart  main.dart
uptime/lib/data/models/: post_model.dart  post_service.dart
uptime/lib/domain/entities/: topic.dart
uptime/test/: widget_test.dart
uptime/web/: index.html  manifest.json
(+7 files in other folders)
