[project]
name = "post_generator"
version = "0.1.0"
description = "post_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "ddgs>=9.5.2",
]

[project.scripts]
post_generator = "post_generator.main:run"
run_crew = "post_generator.main:run"
train = "post_generator.main:train"
replay = "post_generator.main:replay"
test = "post_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
